updates to HTML
updating mobile bridal images

--- a/bridal.html
+++ b/bridal.html
@@ -188,11 +188,11 @@
 	</section>
 </div>
 <div id="bridesmaid-column-3">
-	<img class="bridesmaid-image" src="images/brad.JPG"/>
-	<img class="bridesmaid-image" src="images/brian.JPG"/>
-	<img class="bridesmaid-image" src="images/scoops2.JPG"/>
+	<img class="bridesmaid-image" src="images/brad.jpg"/>
+	<img class="bridesmaid-image" src="images/brian.jpg"/>
+	<img class="bridesmaid-image" src="images/scoops2.jpg"/>
 	<img class="bridesmaid-image" src="images/christopher.jpg"/>
-	<img class="bridesmaid-image" src="images/eddie.JPG"/>
+	<img class="bridesmaid-image" src="images/eddie.jpg"/>
 	<img class="bridesmaid-image" src="images/markp.PNG"/>
 	<img class="bridesmaid-image" src="images/markr.JPG"/>
 </div>
