changes to html again
changes

--- a/bridal.html
+++ b/bridal.html
@@ -92,21 +92,21 @@
 		<p>A production artist living in Carle Place, NY, Melissa became close with Caitlyn through a mutual friend - but Caitlyn's known her fianc&eacute;, John, since high school. Cait shares her love of Disney and running with Melissa - she's actually run 7 half marathons!</p>
 	</section>
 
-	<img class="bridesmaid-image-mobile" src="images/brad.JPG"/>
+	<img class="bridesmaid-image-mobile" src="images/brad.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Brad Henderson - Best Man</h3>
 		<p>Brother of the groom, Brad is (by default) one of Eric's longest standing buddies. Brad lives in Los Angeles, CA, works as a motorsport engineer and shares a love of cars and racing with the groom himself.</p>
 		</section>
 
-		<img class="bridesmaid-image-mobile" src="images/brian.JPG"/>
+		<img class="bridesmaid-image-mobile" src="images/brian.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Brian Cook - Groomsman</h3>
 		<p>Brian has known Caitlyn since sixth grade, both pianists in middle school jazz band. Ever since Eric came into Brian's life, they've been two peas in a weird pod. Brian lives outside of San Francisco, CA, works in audio engineering, loves pizza and drives his girlfriend crazy on days that end in Y.</p>
 		</section>
 
-		<img class="bridesmaid-image-mobile" src="images/scoops2.JPG"/>
+		<img class="bridesmaid-image-mobile" src="images/scoops2.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Nick 'Scoops' Dardaris - Groomsman</h3>
@@ -120,7 +120,7 @@
 		<p>Caitlyn and Christopher are cousins, who grew up in neighboring towns (Wantagh and Levittown), so they've always been close. Eric and Christopher first met at an Italian restaurant, Arturo’s in Floral Park.  He was bold that night and ordered the Chicken Parmesan (to quote Christopher, it was EXCELLENT.) He and Eric hit it off that night and have become friends ever since.</p>
 		</section>
 
-					<img class="bridesmaid-image-mobile" src="images/eddie.JPG"/>
+					<img class="bridesmaid-image-mobile" src="images/eddie.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Eddie Hughes - Groomsman</h3>
