--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </nav>
 <div class="wrapper">
 	<header>
-		<img id="homepage-hero" src="images/homepage2.jpg">
+		<img id="homepage-hero" src="images/homepage2.jpeg">
 	</header>
 
 
