changes to bridal
changes

--- a/bridal.html
+++ b/bridal.html
@@ -89,7 +89,7 @@
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Melissa Schuck - Bridesmaid</h3>
-		<p>A production artist living in Carle Place, NY, Melissa became close with Caitlyn through a mutual friend - but Caitlyn's known her fianc&eacute;, John, since high school. Cait shares her love of Disney and running with Melissa - she's actually run 7 half marathons!</p>
+		<p>A production artist living in Carle Place, NY, Melissa became close with Caitlyn through a mutual friend, and their love of Disney and tacos have kept them close ever since. Cait even shares her love of running with Melissa - Mel has run 7 half marathons and counting!</p>
 	</section>
 
 	<img class="bridesmaid-image-mobile" src="images/brad.jpg"/>
