changes after cait's comments
changes after cat’s comments

--- a/bridal.html
+++ b/bridal.html
@@ -71,7 +71,7 @@
 		<p>The dynamic partner in crime of Cait's, Natalie lives in New York City and loves bacon. One time, she joined the cross country team, although she really didn't like running. But it was a great excuse to chill with Caitlyn and drink smoothies after practice!</p>
 		</section>
 
-		<img class="bridesmaid-image-mobile" src="images/christine.JPG"/>
+		<img class="bridesmaid-image-mobile" src="images/christine2.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Christine Henderson - Bridesmaid</h3>
@@ -103,7 +103,7 @@
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Brian Cook - Groomsman</h3>
-		<p>Brian has known Caitlyn since sixth grade, both pianists in middle school jazz band. Ever since Eric came into Brian's life, they've been two peas in a weird pod. Brian lives outside of San Francisco, CA, works in audio engineering, loves pizza and drives his girlfriend crazy on days that end in Y.</p>
+		<p>Brian has known Caitlyn since sixth grade, both pianists in middle school jazz band. Ever since Eric came into Brian's life, they've been two peas in a weird pod. Brian lives outside of San Francisco, CA, works in audio engineering, loves pizza and driving his girlfriend crazy.</p>
 		</section>
 
 		<img class="bridesmaid-image-mobile" src="images/scoops2.jpg"/>
@@ -117,21 +117,21 @@
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Christopher Hughes - Groomsman</h3>
-		<p>Caitlyn and Christopher are cousins, who grew up in neighboring towns (Wantagh and Levittown), so they've always been close. Eric and Christopher first met at an Italian restaurant, Arturo’s in Floral Park.  He was bold that night and ordered the Chicken Parmesan (to quote Christopher, it was EXCELLENT.) He and Eric hit it off that night and have become friends ever since.</p>
+		<p>Caitlyn and Christopher are cousins who grew up in neighboring towns, so they've always been close. Eric and Christopher first met at an Italian restaurant, Arturo’s in Floral Park.  He was bold that night and ordered the Chicken Parmesan (to quote Christopher, it was EXCELLENT.) He and Eric hit it off that night and have become friends ever since.</p>
 		</section>
 
 					<img class="bridesmaid-image-mobile" src="images/eddie.jpg"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Eddie Hughes - Groomsman</h3>
-		<p>Being the smarter child in the Hughes' household, Caitlyn always looked to Eddie for advice. Even though she broke his nose once, she's not too bad. He is now working on his studies to lead him to a greater life. Eddie lives in New York, and is also colorblind. Eddie met Eric, slowly after he started dating Caitlyn on the slopes of Jiminy Peak.</p>
+		<p>Being the smarter child in the Hughes' household, Caitlyn always looked to Eddie for advice. Even though she broke his nose once, she's not too bad. Eddie lives in New York, attends college in CT and is also colorblind. Eddie met Eric, slowly after he started dating Caitlyn on the slopes of Jiminy Peak.</p>
 		</section>
 
 			<img class="bridesmaid-image-mobile" src="images/markp.PNG"/>
 
 		<section class="bridesmaid-bio-mobile">
 		<h3>Mark Payne - Groomsman</h3>
-		<p>Mark lives in San Francisco, CA and is an attorney for the Department of Homeland Security. When Mark is not working, Mark enjoys the simpler times, like exploring the outdoors, and spending time with his fiancé, Rachel, and dog, Ovie. Mark and Eric met on the job in DC, and they golfed as much as possible.</p>
+		<p>Mark lives in San Francisco and is an attorney for the Department of Homeland Security. When Mark is not working, Mark enjoys the simpler times, like exploring the outdoors, and spending time with his fiancé, Rachel, and dog, Ovie. Mark and Eric met on the job in DC, and they golfed as much as possible.</p>
 		</section>
 
 			<img class="bridesmaid-image-mobile" src="images/markr.JPG"/>
@@ -152,7 +152,7 @@
 			<img class="bridesmaid-image" src="images/catherine.JPG"/>
 			<img class="bridesmaid-image" src="images/victoria.JPG"/>
 			<img class="bridesmaid-image" src="images/natalie.jpg"/>
-			<img class="bridesmaid-image" src="images/christine.JPG"/>
+			<img class="bridesmaid-image" src="images/christine2.jpg"/>
 			<img class="bridesmaid-image" src="images/amanda.JPG"/>
 			<img class="bridesmaid-image" src="images/melissa.PNG"/>
 		</div>
@@ -202,27 +202,28 @@
 		<h3>Brad Henderson - Best Man</h3>
 		<p>Brother of the groom, Brad is (by default) one of Eric's longest standing buddies. Brad lives in Los Angeles, CA, works as a motorsport engineer and shares a love of cars and racing with the groom himself.<br/><br/><br/></p>
 		</section>
-	<section class="bridesmaid-bio-mid">
+	<section class="bridesmaid-bio">
 		<h3>Brian Cook - Groomsman</h3>
-		<p>Brian has known Caitlyn since sixth grade, both pianists in middle school jazz band. Ever since Eric came into Brian's life, they've been two peas in a weird pod. Brian lives outside of San Francisco, CA, works in audio engineering, loves pizza and drives his girlfriend crazy on days that end in Y.</p>
+		<p>Brian has known Caitlyn since sixth grade, both pianists in middle school jazz band. Ever since Eric came into Brian's life, they've been two peas in a weird pod. Brian lives outside of San Francisco, CA, works in audio engineering, loves pizza and driving his girlfriend crazy.</p>
 	</section>
+	<br/>
 	<section class="bridesmaid-bio">
 		<h3>Nick 'Scoops' Dardaris - Groomsman</h3>
 		<p>Eric and Scoops met while attending college at UAlbany. Eric is responsible for dubbing "Nick" with the name Scoops, and he has been using it professionally ever since. Scoops recently moved to Philadelphia to continue his career in audio engineering. </p>
 	</section>
 	<section class="bridesmaid-bio">
 		<h3>Christopher Hughes - Groomsman</h3>
-		<p>Caitlyn and Christopher are cousins, who grew up in neighboring towns (Wantagh and Levittown), so they've always been close. Eric and Christopher first met at an Italian restaurant, Arturo’s in Floral Park.  He was bold that night and ordered the Chicken Parmesan (to quote Christopher, it was EXCELLENT.) He and Eric hit it off that night and have become friends ever since.</p>
+		<p>Caitlyn and Christopher are cousins who grew up in neighboring towns, so they've always been close. Eric and Christopher first met at an Italian restaurant, Arturo’s in Floral Park.  He was bold that night and ordered the Chicken Parmesan (to quote Christopher, it was EXCELLENT.) He and Eric hit it off that night and have become friends ever since.</p>
 	</section>
-	<section class="bridesmaid-bio-mid">
+	<section class="bridesmaid-bio">
 		<h3>Eddie Hughes - Groomsman</h3>
-		<p>Being the smarter child in the Hughes' household, Caitlyn always looked to Eddie for advice. Even though she broke his nose once, she's not too bad. He is now working on his studies to lead him to a greater life. Eddie lives in New York, and is also colorblind. Eddie met Eric, slowly after he started dating Caitlyn on the slopes of Jiminy Peak.</p>
+		<p>Being the smarter child in the Hughes' household, Caitlyn always looked to Eddie for advice. Even though she broke his nose once, she's not too bad. Eddie lives in New York, attends college in CT and is also colorblind. Eddie met Eric, slowly after he started dating Caitlyn on the slopes of Jiminy Peak.</p>
 	</section>
-	<section class="bridesmaid-bio-mid">
+	<section class="bridesmaid-bio">
 		<h3>Mark Payne - Groomsman</h3>
-		<p>Mark lives in San Francisco, CA and is an attorney for the Department of Homeland Security. When Mark is not working, Mark enjoys the simpler times, like exploring the outdoors, and spending time with his fiancé, Rachel, and dog, Ovie. Mark and Eric met on the job in DC, and they golfed as much as possible.</p>
+		<p>Mark lives in San Francisco and is an attorney for the Department of Homeland Security. When Mark is not working, Mark enjoys the simpler times, like exploring the outdoors, and spending time with his fiancé, Rachel, and dog, Ovie. Mark and Eric met on the job in DC, and they golfed as much as possible.</p>
 	</section>
-	<section class="bridesmaid-bio-mid">
+	<section class="bridesmaid-bio">
 		<h3>Mark Robinson - Groomsman</h3>
 		<p>Eric and Mark have been friends forever, and lived just a mile and a half from each other in Weedsport, NY throughout their childhood and teenage years. They grew riding and working on essentially anything/everything that had a motor together. Mark currently works for the New York State thruway.</p>
 	</section>
