--- a/wedding.html
+++ b/wedding.html
@@ -48,20 +48,48 @@
             <p class= "line">________________________________________</p>
             <h3>When</h3>
           <p>Saturday, June 30, 2018</p>
-          <p>Ceremony: 3 PM</p>
-          <p>Dinner, drinks &amp; dancing to immediately follow</p>
+          <p>Ceremony: 4:30 PM</p>
+          <p><i>We are having an unplugged ceremony &amp; ask that no photos <br/> or videos are taken by guests at this time.</i></p>
+          <p>Cocktail Hour &amp; Reception to immediately follow</p>
+          <p>Formal Attire</p>
           <br>
           <h3>Where</h3>
           <p>New York Country Club</p>
           <p>103 Brick Church Rd, Spring Valley, NY 10977</p>
           <br>
-          <div class="info-mobile-only">
+          <h3>Happily Ever After Party</h3>
+          <p>11:30 PM</p>
+          <p>DoubleTree by Hilton Nanuet - </p>
+          <p>Windsor Grille Restaurant &amp; Lounge</p>
+          <br/>
           <h3>Hotel Accomodations</h3>
           <p>DoubleTree by Hilton Hotel Nanuet</p>
           <p>425 NY-59, Nanuet, NY 10954</p>
           <p><a href="http://doubletree.hilton.com/en/dt/groups/personalized/N/NYCNADT-HHW-20180628/index.jhtml?WT.mc_id=POG">Click here to book your hotel</a></p>
-          <p><i>The special room rate will be available until June 1, 2017</i></p></div>
-        
+          <p>The Bride &amp; Groom will be staying at this hotel,<br/> and there is a room block for the event. </p>
+          <p>Please book under "Hughes and Henderson Wedding Block."</p>
+          <p><i>The special room rate will be available until June 1, 2017</i></p>
+          <br>
+          <h3>Transportation</h3>
+          <p>Shuttle service will be provided to and from the event.</p>
+          <p>The first bus will leave at 3:50 PM and the last bus will leave at 4:20 PM <br> from the DoubleTree by Hilton Hotel Nanuet.</p>
+          <br>
+          <h3>TRAVEL</h3>
+          <p>Nanuet New Jersey Transit Station</p>
+          <p>1 Orchard Street West</p>
+          <p>Nanuet, NY 10954</p>
+          <br>
+         <p>Stewart International Airport</p>
+          <p>1180 1st St</p>
+          <p>New Windsor, NY 12553</p>
+          <br>
+         <h3>Things To Do</h3>
+          <p>Palisades Center Shopping Mall</p>
+          <p>1000 Palisades Center Drive</p> <p>West Nyack Ny 10994</p>
+          <br>
+         <p>High Tor State Park</p>
+          <p>425 S Mountain Road</p>
+          <p>New City, NY 10956</p>
          
           <p class= "line">________________________________________</p>
           <div class=venue-images>
