--- a/wedding.html
+++ b/wedding.html
@@ -72,7 +72,7 @@
           <br>
           <h3>Transportation</h3>
           <p>Shuttle service will be provided to and from the event.</p>
-          <p>The first bus will leave at 3:50 PM and the last bus will leave at 4:20 PM <br> from the DoubleTree by Hilton Hotel Nanuet.</p>
+          <p>The first bus will leave at 3:50 PM and the last bus will leave at 4:20 PM  from the DoubleTree by Hilton Hotel Nanuet.</p>
           <br>
           <h3>TRAVEL</h3>
           <p>Nanuet New Jersey Transit Station</p>
